--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,19 +13,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-  file_picker: ^3.0.0
+  file_picker: ^4.5.1
+  pdf: ^3.7.4
+  uuid: ^3.0.6
+  optional: ^6.1.0+1
+  pdf_text:
+    path: ../
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pdf: ^3.0.1
-  uuid: ^3.0.1
-  optional: ^6.0.0-nullsafety.0
+  
+  
+  
 
-  pdf_text:
-    path: ../
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
